--- a/.github/workflows/OWRT-CORE.yml
+++ b/.github/workflows/OWRT-CORE.yml
@@ -88,7 +88,7 @@ jobs:
       - name: 克隆源代码 (Clone OWRT Code)
         run: |
           # 克隆OpenWrt源代码仓库到本地目录owrt
-          git clone $OWRT_URL ./owrt
+          git clone --depth=1 $OWRT_URL ./owrt
 
       - name: 加载自定义feeds (Load custom feeds)
         run: |
