--- a/.github/workflows/OWRT-CORE.yml
+++ b/.github/workflows/OWRT-CORE.yml
@@ -95,6 +95,7 @@ jobs:
           # 在OpenWrt源码目录中添加自定义feeds
           cd ./owrt
           # echo 'src-git smpackage https://github.com/kenzok8/small-package' >> feeds.conf.default
+          # echo 'src-git kenzok8_packages https://github.com/kenzok8/openwrt-packages' >> feeds.conf.default
 
       - name: 更新feeds (Update Feeds)
         run: |
