--- a/.github/workflows/OWRT-CORE.yml
+++ b/.github/workflows/OWRT-CORE.yml
@@ -95,7 +95,7 @@ jobs:
           # 在OpenWrt源码目录中添加自定义feeds
           cd ./owrt
           # echo 'src-git smpackage https://github.com/kenzok8/small-package' >> feeds.conf.default
-          # echo 'src-git kenzok8_packages https://github.com/kenzok8/openwrt-packages' >> feeds.conf.default
+          echo 'src-git kenzok8_packages https://github.com/kenzok8/openwrt-packages' >> feeds.conf.default
 
       - name: 更新feeds (Update Feeds)
         run: |
@@ -122,7 +122,7 @@ jobs:
           # 复制：拷贝固件配置到新的.config文件
           cp -rf $GITHUB_WORKSPACE/Config/$OWRT_TARGET.txt .config
           $GITHUB_WORKSPACE/Scripts/Extras.sh  # 执行额外的配置脚本
-          make defconfig  # 生成默认配置文件
+          # make defconfig  # 生成默认配置文件
 
       - name: 清理编译工具链产生的临时文件 (Cleanup Toolchain)
         run: |
