--- a/.github/workflows/OWRT-CORE.yml
+++ b/.github/workflows/OWRT-CORE.yml
@@ -122,7 +122,7 @@ jobs:
           # 复制：拷贝固件配置到新的.config文件
           cp -rf $GITHUB_WORKSPACE/Config/$OWRT_TARGET.txt .config
           $GITHUB_WORKSPACE/Scripts/Extras.sh  # 执行额外的配置脚本
-          # make defconfig  # 生成默认配置文件
+          make defconfig  # 生成默认配置文件
 
       - name: 清理编译工具链产生的临时文件 (Cleanup Toolchain)
         run: |
