--- a/.github/workflows/OWRT-CORE.yml
+++ b/.github/workflows/OWRT-CORE.yml
@@ -48,7 +48,8 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           # 清理Docker镜像和不再需要的软件包
-          docker rmi $(docker images -q)
+          # 清理Docker镜像（仅当存在镜像时执行）
+          docker images -q | grep -q . && docker rmi $(docker images -q) || echo "没有Docker镜像可以清理"
           sudo -E rm -rf $(cat $GITHUB_WORKSPACE/Depends.txt | sed -n "1{s/\r$//;p;q}")
           # 更新软件包列表并升级系统
           sudo -E apt -yqq update
