--- a/.github/workflows/OWRT-CORE.yml
+++ b/.github/workflows/OWRT-CORE.yml
@@ -47,13 +47,22 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          # 清理Docker镜像和不再需要的软件包
           # 清理Docker镜像（仅当存在镜像时执行）
           docker images -q | grep -q . && docker rmi $(docker images -q) || echo "没有Docker镜像可以清理"
+          # 删除指定路径下的文件/目录（来自Depends.txt第一行）
           sudo -E rm -rf $(cat $GITHUB_WORKSPACE/Depends.txt | sed -n "1{s/\r$//;p;q}")
           # 更新软件包列表并升级系统
           sudo -E apt -yqq update
-          sudo -E apt -yqq purge $(cat $GITHUB_WORKSPACE/Depends.txt | sed -n "2{s/\r$//;p;q}")
+          # 获取第2行要删除的包列表，并过滤掉通配符和无效内容
+          PACKAGES_TO_PURGE=$(cat $GITHUB_WORKSPACE/Depends.txt | sed -n "2{s/\r$//;p;q}" | tr ' ' '\n' | grep -v "\*" | xargs)
+          # 只在有包存在时执行purge
+          if [ -n "$PACKAGES_TO_PURGE" ]; then
+              echo "正在清理以下已知包：$PACKAGES_TO_PURGE"
+              sudo -E apt -yqq purge $PACKAGES_TO_PURGE || echo "某些包可能未安装，跳过..."
+          else
+              echo "没有有效的包需要清理"
+          fi
+          # 升级系统
           sudo -E apt -yqq full-upgrade
           # 安装必需的软件包
           sudo -E apt -yqq install $(cat $GITHUB_WORKSPACE/Depends.txt | sed -n "3{s/\r$//;p;q}")
